...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
                                        <subviews>
                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBj-C0-cMC" customClass="CustomButton" customModule="GST_Calculator" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="79.5" height="58"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="25"/>
                                                <state key="normal" title="AC">
                                                    <color key="titleColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="onClearPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XoT-mY-uyO"/>
                                                </connections>
                                            </button>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="XRB-Mf-pMK" userLabel="Main">
                                <rect key="frame" x="16" y="78" width="288" height="184"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Z2c-ds-TR9">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="55"/>
                                        <subviews>
                                            <label opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="FM6-eD-3i2" customClass="CustomLabel" custo
                                                <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="u9t-gI-5lj"/>
                                                </constraints>
...
                                <rect key="frame" x="16" y="90" width="288" height="35"/>
                                <color key="backgroundColor" red="0.12453555606828272" green="0.77822756479289334" blue="0.31612214224628338" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="f19-tA-S06"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Lato-Black" family="Lato" pointSize="18"/>
                                <state key="normal" title="Turn off Ad for $0.99">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
                                <rect key="frame" x="16" y="140" width="288" height="35"/>
                                <color key="backgroundColor" red="0.98039215690000003" green="0.59607843140000005" blue="0.043137254899999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="blN-nB-WQn"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Lato-Black" family="Lato" pointSize="18"/>
                                <state key="normal" title="Restore Purchses">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
